--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -12,5 +12,8 @@
 		<item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
     </style>
+    <style name="HomeTheme" >
+		<item name="android:windowNoTitle">true</item>
+    </style>
 
 </resources>
