--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -1,22 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".HomeActivity" >
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:background="@drawable/blue_bkg" >
 
         <ImageView
             android:id="@+id/iv_heima"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingTop="30dp"
             android:src="@drawable/heima" />
 
         <TextView
@@ -24,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/iv_heima"
+            android:paddingTop="30dp"
             android:text="鲨鱼辣椒安全卫士" />
 
         <com.yiya.mobilesafe.ui.MarqueeTextView
@@ -39,12 +38,21 @@
             android:paddingTop="5dp"
             android:singleLine="true"
             android:text="鲨鱼辣椒安全卫士由鲨鱼辣椒大人亲自出品,侵权必究" />
+
+        <ImageView
+            android:clickable="true"
+            android:onClick="setting"
+            android:padding="10dp"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/setting" />
     </RelativeLayout>
 
     <GridView
         android:id="@+id/gv"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:numColumns="2" >
     </GridView>
 
