--- a/res/layout/items.xml
+++ b/res/layout/items.xml
@@ -1,7 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" 
+    android:padding="15dp"
+    android:background="@drawable/home_selector"
+    >
+
+    <ImageView
+        android:src="@drawable/sjfd"
+        android:id="@+id/iv_items"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_items_title"
+        android:paddingTop="3dp"
+        android:textSize="15sp"
+        android:layout_toRightOf="@+id/iv_items"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="手机防盗" />
+    <TextView
+        android:id="@+id/tv_items_title1"
+        android:textSize="13sp"
+        android:paddingTop="3dp"
+        android:layout_toRightOf="@+id/iv_items"
+        android:layout_below="@+id/tv_items_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="远程定位手机" />
 
 </RelativeLayout>
