--- a/res/layout/activity_twolostfound.xml
+++ b/res/layout/activity_twolostfound.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:background="#7bc7ef"
         android:padding="8dp"
-        android:text="1.欢迎使用手机防盗"
+        android:text="2.手机卡绑定"
         android:textColor="#ffffff"
         android:textSize="18sp" />
 
@@ -17,25 +17,33 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:text="您的手机防盗卫士:" />
+        android:text="通过绑定SIM卡:" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:text="下次重启手机如果发现SIM卡变化,就发送报警短信" />
 
     <!-- gravity  组件的子组件 -->
 
-    <TextView
-        style="@style/items"
-        android:text="SIM卡变更报警" />
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
 
-    <TextView
-        style="@style/items"
-        android:text="GPS追踪" />
-
-    <TextView
-        style="@style/items"
-        android:text="远程锁屏" />
-
-    <TextView
-        style="@style/items"
-        android:text="远程销毁数据" />
+        <TextView
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="点击绑定/解绑SIM卡" />
+        <ImageView 
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/list_button_lock_pressed"
+            />
+        
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -76,21 +84,22 @@
             android:src="@drawable/setup1" />
 
         <Button
-            android:onClick="next1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:background="@drawable/nextbutton_selector"
             android:drawableRight="@drawable/next"
+            android:onClick="next1"
             android:text="下一步" />
+
         <Button
-            android:onClick="cancer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@drawable/nextbutton_selector"
-			android:drawableLeft="@drawable/previous"            
+            android:drawableLeft="@drawable/previous"
+            android:onClick="cancer"
             android:text="返回主界面" />
     </RelativeLayout>
 
