--- a/res/layout/activity_fourlostfound.xml
+++ b/res/layout/activity_fourlostfound.xml
@@ -9,33 +9,34 @@
         android:layout_height="wrap_content"
         android:background="#7bc7ef"
         android:padding="8dp"
-        android:text="1.欢迎使用手机防盗"
+        android:text="4.恭喜您设置完成"
         android:textColor="#ffffff"
         android:textSize="18sp" />
 
-    <TextView
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="您的手机防盗卫士:" />
+        android:orientation="horizontal" >
 
-    <!-- gravity  组件的子组件 -->
+        <CheckBox
+            android:id="@+id/ck"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <TextView
-        style="@style/items"
-        android:text="SIM卡变更报警" />
-
-    <TextView
-        style="@style/items"
-        android:text="GPS追踪" />
-
-    <TextView
-        style="@style/items"
-        android:text="远程锁屏" />
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:text="打钩,防盗保护已经开启" />
+    </LinearLayout>
 
     <TextView
-        style="@style/items"
-        android:text="远程销毁数据" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:gravity="center_vertical"
+        android:text="防盗保护已开启"
+        android:textSize="12sp" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -47,22 +48,22 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:src="@drawable/presence_invisible" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/presence_invisible" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/presence_invisible" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:src="@drawable/presence_online" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/presence_invisible" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/presence_invisible" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/presence_invisible" />
     </LinearLayout>
 
     <RelativeLayout
@@ -73,25 +74,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/setup1" />
+            android:src="@drawable/phone" />
 
         <Button
-            android:onClick="next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:background="@drawable/nextbutton_selector"
             android:drawableRight="@drawable/next"
-            android:text="下一步" />
+            android:onClick="next"
+            android:text="设置完成" />
+
         <Button
-            android:onClick="cancer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@drawable/nextbutton_selector"
-			android:drawableLeft="@drawable/previous"            
-            android:text="返回主界面" />
+            android:drawableLeft="@drawable/previous"
+            android:onClick="cancer"
+            android:text="上一步" />
     </RelativeLayout>
 
 </LinearLayout>
