--- a/res/layout/defenfitems.xml
+++ b/res/layout/defenfitems.xml
@@ -8,7 +8,7 @@
         android:id="@+id/tv_defend_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="吴梦玲" />
+        android:text="zfx" />
 
     <TextView
         android:id="@+id/tv_defend_number"
