--- a/res/layout/activity_defend.xml
+++ b/res/layout/activity_defend.xml
@@ -26,6 +26,7 @@
     </RelativeLayout>
 
     <ListView
+        android:fastScrollEnabled="true"
         android:id="@+id/defend_number"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
