--- a/res/layout/activity_add_blacknumber.xml
+++ b/res/layout/activity_add_blacknumber.xml
@@ -12,10 +12,10 @@
         android:textSize="18dp" />
 
     <LinearLayout
-        android:padding="10dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:padding="10dp" >
 
         <TextView
             android:layout_width="fill_parent"
@@ -25,15 +25,93 @@
 
         <EditText
             android:id="@+id/et_number"
-            android:background="@drawable/et_numberselector"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/et_numberselector"
             android:hint="黑名单号码" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp" >
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="添加姓名"
+            android:textSize="18dp" />
+
         <EditText
-            android:background="@drawable/et_numberselector"
+            android:id="@+id/et_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:hint="黑名单号码" />
+            android:background="@drawable/et_numberselector"
+            android:hint="黑名单姓名" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:padding="10dp" >
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="选择模式"
+            android:textSize="18dp" />
+
+        <RadioGroup
+            android:id="@+id/rgp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <RadioButton
+                android:id="@+id/radio1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:checked="true"
+                android:text="拦截电话" />
+
+            <RadioButton
+                android:id="@+id/radio2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="拦截短信" />
+
+            <RadioButton
+                android:id="@+id/radio3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="全部拦截" />
+        </RadioGroup>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/confirm"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="确认" />
+
+        <Button
+           android:id="@+id/cancel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="取消" />
     </LinearLayout>
 
 </LinearLayout>
